--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -24,10 +24,15 @@
 
   border: 4px solid black;
   border-top: none;
-  
-  overflow: scroll;
 
   zoom: 1;
+  
+  /*overflow: scroll;*/
+
+  overflow: auto;
+  cursor: grab;
+
+
 }
 
 .tree-container {
@@ -38,6 +43,7 @@
   border: 4px solid black;
   overflow: scroll;
   margin: 0;
+
 }
 
 /* The unordered list holding the data points, no list styling and no spacing */
