--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -298,8 +298,8 @@ body {
 }
 
 .node-image {
-  height: 5rem;
-  width: 5rem;
+  height: 4.5rem;
+  width: 4.5rem;
   margin: 4px;
 
   border-radius: 50px;
@@ -532,6 +532,18 @@ body {
 
 /*///////////////////////////////////*/
 
+.openNav-button {
+  position: relative;
+  height: 30px;
+  width: 30px;
+  border-radius: 100%;
+  border: 2.5px solid black;
+}
+
+.openNav-button:hover {
+  transition-duration: 0.2s;
+  background-color: darkgray;
+}
 
 /* The side navigation menu */
 .sidenav {
@@ -571,9 +583,24 @@ body {
   margin-left: 50px;
 }
 
+.bottomnav {
+  height: auto; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  bottom: 0; /* Stay at the bottom */
+
+  left: 50%;
+  transform: translateX(-50%);
+
+  background-color: #002e5d; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 0.3s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-  transition: margin-left .5s;
+#navButton {
+  transition: margin-bottom .5s;
   padding: 20px;
 }
 
