Fixed positioning for nav button

--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -74,14 +74,16 @@
       <div class="side-container">
         <div id="menu-position" style="width: 100%; height: 40%"></div>    
       </div>
+
+      <div id="navButton" style="position: fixed;">
+        <button class="openNav-button" onclick="openNavBottom()">Left-Over</button>
+      </div>
+    
       
     </div>
   
     <div id="tutorial"></div>
 
-    <div id="navButton">
-    <button class="openNav-button" onclick="openNavBottom()">&#8593</button>
-    </div>
 
     <div id="myBottomnav" class="bottomnav">
       <!--<a href="javascript:void(0)" class="closebtn" onclick="closeNavBottom()">&times;</a>-->
