--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../../static/tree/CSS/chart.css"/>
     <!--DragScroll-->
     <script type="text/javascript" src="https://cdn.rawgit.com/asvd/dragscroll/master/dragscroll.js"></script>
+    <!--Person Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
       /* width */
@@ -76,7 +78,7 @@
       </div>
 
       <div id="navButton" style="position: fixed;">
-        <button class="openNav-button" onclick="openNavBottom()">Left-Over</button>
+        <button class="openNav-button" onclick="openNavBottom()"><i class="fa">&#xf007;</i></button>
       </div>
     
       
