--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -86,12 +86,13 @@
   
     <div id="tutorial"></div>
 
+    <div>
 
-    <div id="myBottomnav" class="bottomnav">
-      <!--<a href="javascript:void(0)" class="closebtn" onclick="closeNavBottom()">&times;</a>-->
-      <div><button class="x-button" onclick='closeNavBottom()'><strong>X</strong></button></div>
-          <div id="footer" class="footer-box">
-      <div id="nodeContainer" class="node-container"></div>
+      <div id="myBottomnav" class="bottomnav">
+        <div><button class="x-button" onclick='closeNavBottom()'><strong>X</strong></button></div>
+        <div id="footer" class="footer-box">
+        <div id="nodeContainer" class="node-container"></div>
+      </div>
     </div>
 
     <script src="../../static/tree/JS/multiTree.js"></script>
