--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -61,7 +61,7 @@
 
     <div id="page-container" style="display: flex; position: relative; left:0;">
 
-      <div style="display:flex; width: 80%; height: 100%">
+      <div id="tree-chart-container" style="display:flex; width: 80%; height: 100%">
         <figure id="treeChart" class="css-chart dragscroll" style="--widget-size: 1000px; zoom: 1;">
           <ul id="chart" class="line-chart"></ul>
           <svg id='lines' height="1000" width="1000" style="z-index:-1; overflow:hidden;"></svg>
@@ -69,11 +69,11 @@
         </figure>
       </div>
 
-      <div style="display: flex; flex-direction: column; align-items: left; width: 20%; position: absolute; top: 0;">
-      <button class="zoom-btn" onclick="tutorial()" style="left: 0;">Tutorial</button>
+      <div id="tutorial-button-container" style="display: flex; flex-direction: column; align-items: left; width: 20%; position: absolute; top: 0;">
+        <button class="zoom-btn" onclick="tutorial()" style="left: 0;">Tutorial</button>
       </div>
       
-      <div class="side-container">
+      <div id="side-container" class="side-container">
         <div id="menu-position" style="width: 100%; height: 40%"></div>    
       </div>
 
