Fixed remove relationships bug

--- a/photoTree/tree/templates/tree/refactor.html
+++ b/photoTree/tree/templates/tree/refactor.html
@@ -89,7 +89,7 @@
     <div>
 
       <div id="myBottomnav" class="bottomnav">
-        <div><button class="x-button" onclick='closeNavBottom()'><strong>X</strong></button></div>
+        <div><button class="close-nav-button" onclick='closeNavBottom()'><strong>X</strong></button></div>
         <div id="footer" class="footer-box">
         <div id="nodeContainer" class="node-container"></div>
       </div>
