--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -388,6 +388,49 @@ body {
 
 }
 
+.openNav-button {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  height: 30px;
+  width: auto;
+  border-radius: 0%;
+  border: 2.5px solid black;
+}
+
+.openNav-button:hover {
+  transition-duration: 0.2s;
+  background-color: darkgray;
+}
+
+.bottomnav {
+  height: auto; /*Matches node sizes 
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  bottom: 0; /* Stay at the bottom */
+
+  background-color: #002e5d; /* Black*/
+  overflow: scroll;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 0.3s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+.close-nav-button {
+  height: 25px; 
+  width: 25px; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+  border-radius: 100%;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#navButton {
+  transition: margin-bottom .5s;
+  padding: 20px;
+}
+
 /*Smart Phone sized devices*/
 @media screen and (min-width: 0px) and (max-width: 450px) {
   .side-container {
@@ -524,84 +567,6 @@ body {
   }
 }
 
-
-/*///////////////////////////////////*/
-
-.openNav-button {
-  position: fixed;
-  bottom: 10px;
-  left: 10px;
-  height: 30px;
-  width: auto;
-  border-radius: 0%;
-  border: 2.5px solid black;
-}
-
-.openNav-button:hover {
-  transition-duration: 0.2s;
-  background-color: darkgray;
-}
-
-/* The side navigation menu */
-.sidenav {
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  right: 0;
-  background-color: tan; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-}
-
-/* The navigation menu links */
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-.bottomnav {
-  height: auto; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  bottom: 0; /* Stay at the bottom */
-
-  /*left: 50%;
-  transform: translateX(-50%);
-  */
-
-  background-color: #002e5d; /* Black*/
-  overflow: scroll;
-  overflow-x: hidden; /* Disable horizontal scroll */
-  transition: 0.3s; /* 0.5 second transition effect to slide in the sidenav */
-}
-
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#navButton {
-  transition: margin-bottom .5s;
-  padding: 20px;
-}
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
