--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -404,7 +404,7 @@ body {
 }
 
 .bottomnav {
-  height: auto; /*Matches node sizes 
+  height: auto; /*Matches node sizes */
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
