--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -216,12 +216,12 @@ body {
   background-color: rgb(214, 213, 213);
 }
 
-
-
 .center-menu {
   padding: 10px;
   width: 100%;
   border-radius: 7px;
+  position: sticky;
+  top: 0;
 
   background: #FAE5A1;
   border: 4px solid black;
@@ -318,7 +318,9 @@ body {
 }
 
 .x-button {
-  display:block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 30px;
   width: 30px;
   border-radius: 100%;
