--- a/photoTree/tree/templates/tree/index.html
+++ b/photoTree/tree/templates/tree/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div id="tutorial-button-container" style="display: flex; flex-direction: column; align-items: left; width: 20%; position: absolute; top: 0;">
-        <button class="zoom-btn" onclick="tutorial()" style="left: 0;">Tutorial</button>
+        <button class="zoom-btn button-34" onclick="tutorial()" style="left: 0;">Tutorial</button>
       </div>
       
       <div id="side-container" class="side-container">
@@ -47,7 +47,7 @@
       </div>
 
       <div id="navButton" style="position: fixed;">
-        <button class="openNav-button" onclick="openNavBottom()"><i class="fa">&#xf007;</i></button>
+        <button class="openNav-button button-34" onclick="openNavBottom()"><i class="fa">&#xf007;</i></button>
       </div>
     </div>
   
@@ -56,7 +56,7 @@
     <div>
 
       <div id="myBottomnav" class="bottomnav">
-        <div><button class="close-nav-button" onclick='closeNavBottom()'><strong>X</strong></button></div>
+        <div><button class="x-button" onclick='closeNavBottom()'><strong>X</strong></button></div>
         <div id="footer" class="footer-box">
         <div id="nodeContainer" class="node-container"></div>
       </div>
